--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!--App-->
-    <string name="app_name">Practica-1</string>
+    <string name="app_name">Práctica 2 MVVM</string>
     <string name="tituloToolbar">Consumo</string>
 
     <!--Main Activity-->
